load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

proto_library(
    name = "cluster_proto",
    srcs = ["cluster.proto"],
)

cc_proto_library(
    name = "cluster_cc_proto",
    deps = [":cluster_proto"],
)

cc_grpc_library(
    name = "cluster_cc_grpc",
    srcs = [":cluster_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":cluster_cc_proto"],
)
