cc_library(
    name = "cluster",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//include",
        "//rpc:cluster_cc_grpc",
        "//store",
        "@com_github_grpc_grpc//:grpc++",
        "@spdlog",
    ],
)
