cc_library(
    name = "cluster",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),
    visibility = [
        "//cluster/functional:__pkg__",
        "//db:__pkg__",
        "//parrotdb:__pkg__",
    ],
    deps = [
        "//include",
        "//rpc:cluster_cc_grpc",
        "//store",
        "@com_github_grpc_grpc//:grpc++",
        "@spdlog",
    ],
)
