cc_library(
    name = "db",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),  # TODO(AD) Limit public
    visibility = ["//visibility:public"],
)

cc_test(
    name = "db-test",
    srcs = glob(["*_test.cc"]),
    copts = [
        "-Iexternal/gtest/include",
    ],
    deps = [
        ":db",
        "@gtest//:gtest_main",
    ],
)
