cc_library(
    name = "db",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),  # TODO(AD) Hide interfaces
    copts = [
        "-Iinclude",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//cluster",
        "//include",
        "//store",
    ],
)

cc_test(
    name = "db-test",
    srcs = glob(["*_test.cc"]),
    copts = [
        "-Iinclude",
        "-Iexternal/gtest/include",
    ],
    deps = [
        ":db",
        "//cluster",
        "//include",
        "//store/mock",
        "@gtest//:gtest_main",
    ],
)
