cc_library(
    name = "parrotdb",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),
    copts = [
        "-Iinclude",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//include:interface",
        "//store",
    ],
)

cc_test(
    name = "parrotdb-test",
    srcs = glob(["*_test.cc"]),
    copts = [
        "-Iexternal/gtest/include",
        "-Iinclude",
    ],
    deps = [
        ":parrotdb",
        "//include:interface",
        "//store",
        "@gtest//:gtest_main",
    ],
)
