cc_library(
    name = "parrotdb",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),
    copts = [
        "-Iinclude",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//cluster",
        "//db",
        "//include",
        "//store",
    ],
)
