cc_library(
    name = "queue",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),  # TODO(AD) Hide interfaces
    copts = [
        "-Iinclude",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//cluster",
        "//include",
        "//store",
    ],
)

cc_test(
    name = "queue-test",
    srcs = glob(["*_test.cc"]),
    copts = [
        "-Iinclude",
        "-Iexternal/gtest/include",
    ],
    deps = [
        ":queue",
        "@gtest//:gtest_main",
    ],
)
