cc_library(
    name = "store",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:private"],
)

cc_test(
    name = "store-test",
    srcs = glob(["*_test.cc"]),
    copts = [
        "-Iexternal/gtest/include",
    ],
    deps = [
        ":store",
        "@gtest//:gtest_main",
    ],
)
