cc_library(
    name = "store",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),  # TODO(AD) Hide interfaces
    visibility = ["//visibility:public"],
)

cc_test(
    name = "store-test",
    srcs = glob(["*_test.cc"]),
    copts = [
        "-Iexternal/gtest/include",
    ],
    deps = [
        ":store",
        "@gtest//:gtest_main",
    ],
)
