cc_library(
    name = "store",
    srcs = glob(
        ["*.cc"],
        exclude = ["*_test.cc"],
    ),
    hdrs = glob(["*.h"]),
    visibility = [
        "//cluster:__pkg__",
        "//db:__pkg__",
        "//parrotdb:__pkg__",
    ],
)

cc_test(
    name = "store-test",
    srcs = glob(["*_test.cc"]),
    copts = [
        "-Iexternal/gtest/include",
    ],
    deps = [
        ":store",
        "@gtest//:gtest_main",
    ],
)
